# keystone-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: enforce-uv.sh
keystone/: __init__.py  agent.py  cli.py  config.py  sandbox.py
keystone/tools/: __init__.py  _helpers.py  files.py  python.py  shell.py
tests/: conftest.py  test_agent.py  test_files.py  test_helpers.py  test_integration.py  test_python.py  test_shell.py  test_tools_init.py
